[package]
name = "instruction-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.6.2"
rand = "0.8.4"
float_next_after = "0.1.1"
clap = { version = "4.4.8", features = ["derive"] }
pprof = { version = "0.13", features = ["flamegraph"] }
linked-hash-map = "0.5.6"
